B-F Sandbox Full-Backup/src/objects/Promotion__c.object
<CustomObject>
    <fields>
        <fullName>Promotion_Sub_Type__c</fullName>
        <description>Pormotion Sub-Type values</description>
        <label>Promotion Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Off - AdHoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Brand Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Cold Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Displays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Feature Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Retail Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off - Staff Sampling / Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - AdHoc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - Consumer Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - Drink Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - Menu Placement / BTG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - Staff Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On - Staff Training</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDVP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remind_Me_Date__c</fullName>
        <description>AUD - Reminder of deal expiration date.</description>
        <label>Remind Me Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INFOWELDERS</description>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>NPA Rollout: Stores the Sales Org for the promotion</description>
        <label>Sales Org</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SouthW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>text (Account__r.Sales_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Placement_is_agreed_discussed__c</fullName>
        <description>if the status of the secondary placement was discussed with a manager or other responsible person - pleased describe that and name this person</description>
        <label>Secondary Placement is agreed/discussed</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <formula>Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <formula>Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size_of_Display__c</fullName>
        <description>description of the  dislpay/secondary placement size in outlet</description>
        <label>Size of Display</label>
        <picklist>
            <picklistValues>
                <fullName>¼     europallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>½    europallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>¾     europallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/1 europallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2      europallet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3      europallet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_of_Display_number_of_shelves__c</fullName>
        <label>Size of Display /number of shelves</label>
        <picklist>
            <picklistValues>
                <fullName>1  shelve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2  shelves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3  shelves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 shelves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 shelves</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Event__c</fullName>
        <description>INFOWELDERS</description>
        <label>Special Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spend_Type__c</fullName>
        <label>Spend Type</label>
        <picklist>
            <picklistValues>
                <fullName>Price Deal - PA Disc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalogue - TA Disc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show - Brand Bldg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranging Deal - Brand Bldg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Menus - Brand Bldg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Pour Agreement - Brand Bldg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper Ad - TA Disc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>INFOWELDERS</description>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>00:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22:00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23:00</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <formula>TEXT (Promotion_Activity_AUD__r.Sub_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_and_Backup__c</fullName>
        <description>INFOWELDERS</description>
        <label>Support and Backup</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TA_Type__c</fullName>
        <inlineHelpText>Shows if deal selected is type TA.</inlineHelpText>
        <label>TA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Rate (Rebate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Age_Group__c</fullName>
        <description>INFOWELDERS</description>
        <label>Target Age Group</label>
        <picklist>
            <picklistValues>
                <fullName>20 - 25 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 - 25 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 - 30 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26 - 30 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 - 45 M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31 -45 F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45+ M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45+ F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Attendance__c</fullName>
        <description>INFOWELDERS</description>
        <label>Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertile__c</fullName>
        <description>NPA Rollout: Stores the Tertile for which the Promotion applies</description>
        <formula>IF( MONTH(Promotion_Start_Date__c) &lt;5 , &apos;3rd Tertile&apos;, IF( MONTH(Promotion_Start_Date__c) &lt;9 , &apos;1st Tertile&apos;, &apos;2nd Tertile&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tertile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_1_WS_CHN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier 1 WS</description>
        <label>Tier 1 WS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions (Tier 1 WS)</relationshipLabel>
        <relationshipName>Promotions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_2_WS_CHN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier 2 WS</description>
        <label>Tier 2 WS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promotions (Tier 2 WS)</relationshipLabel>
        <relationshipName>Promotions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Brand_Profit__c</fullName>
        <description>INFOWELDERS</description>
        <formula>Total_Margin__c  -Total_Promotion_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Gross Profit - Total Promotion Cost</inlineHelpText>
        <label>Total Brand Profit (f)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <description>INFOWELDERS</description>
        <inlineHelpText>Sum of Gross Profit for all related Promotion Goal records</inlineHelpText>
        <label>Total Gross Profit</label>
        <summarizedField>Promotion_Goal__c.Material_Margin__c</summarizedField>
        <summaryForeignKey>Promotion_Goal__c.Promotion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Pouring_Amount2__c</fullName>
        <description>for pouring contracts only</description>
        <label>Total Pouring Amount</label>
        <summarizedField>Pouring__c.Total_Pouring_Amount__c</summarizedField>
        <summaryForeignKey>Pouring__c.Promotion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Promotion_Cost__c</fullName>
        <description>INFOWELDERS</description>
        <inlineHelpText>Sum of Promotion Material Cost for all related Promotion Materials records</inlineHelpText>
        <label>Total Promotion Cost (r)</label>
        <summarizedField>Promotion_Material_Item__c.Extended_Cost__c</summarizedField>
        <summaryForeignKey>Promotion_Material_Item__c.Promotion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Promotion_Costs__c</fullName>
        <description>Total Promotion Costs from Promotion Costs object</description>
        <label>Total Promotion Costs</label>
        <summarizedField>Promotion_Costs__c.Promotion_Cost__c</summarizedField>
        <summaryForeignKey>Promotion_Costs__c.Promotion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Volume__c</fullName>
        <description>for pouring contracts only</description>
        <label>Total Sales Volume</label>
        <summarizedField>Pouring__c.Sales_Volume_Distribution__c</summarizedField>
        <summaryForeignKey>Pouring__c.Promotion__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Promotions</relationshipLabel>
        <relationshipName>Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Volume_Source__c</fullName>
        <inlineHelpText>If spend type is a discount (pa or ta), then this is required.</inlineHelpText>
        <label>Volume Source</label>
        <picklist>
            <controllingField>Spend_Type__c</controllingField>
            <picklistValues>
                <fullName>W/S Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W/S Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Winner_Name__c</fullName>
        <label>Winner Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>costs_of_Secondary_placement__c</fullName>
        <description>do we have spent something for that display/secondary placement?</description>
        <label>costs of Secondary placement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>status_of_Secondary_placement__c</fullName>
        <label>status of Secondary placement</label>
        <picklist>
            <picklistValues>
                <fullName>discussed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>extended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Promotion_Number__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Mechanism__c</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Support_and_Backup__c</columns>
        <columns>Special_Event__c</columns>
        <columns>Target_Age_Group__c</columns>
        <columns>Target_Attendance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>APAC KJ / Admin</role>
            <role>APAC MD / Admin</role>
            <role>APAC SE / Admin</role>
            <role>CHN-Brand Manager</role>
            <role>CHN-Finance Manager</role>
            <role>CHN-Market Manager/Admin</role>
            <role>CHN-Sales Manager</role>
            <role>CHN-Sales Manger (East)</role>
            <role>CHN-Sales Manger (North)</role>
            <role>CHN-Sales Manger (South)</role>
            <role>CHN-Sales Manger (West)</role>
            <role>CHN-Sales Rep (East)</role>
            <role>CHN-Sales Rep (North)</role>
            <role>CHN-Sales Rep (South)</role>
            <role>CHN-Sales Rep (West)</role>
            <role>CHN-Sales Rep E1</role>
            <role>CHN-Sales Rep East2</role>
            <role>CHN-Sales Rep South1</role>
            <role>CHN-Sales Rep South2</role>
            <role>CHN-Sales Supervisor (East)</role>
            <role>CHN-Sales Supervisor (North)</role>
            <role>CHN-Sales Supervisor (South)</role>
            <role>CHN-Sales Supervisor (West)</role>
            <role>CHN-Sales Supervisor East1</role>
            <role>CHN-Sales Supervisor South1</role>
            <role>CHN-Sales Supervisor South2</role>
            <role>DEU-Brand Manager</role>
            <role>DEU-Finance Manager</role>
            <role>DEU-Key Acct Mgr (Edeka)</role>
            <role>DEU-Key Acct Mgr (REWE)</role>
            <role>DEU-Key Sls Rep (N-Edeka)</role>
            <role>DEU-Key Sls Rep (REWE)</role>
            <role>DEU-Key Sls Rep (S-Edeka)</role>
            <role>DEU-Market Manager/Admin</role>
            <role>DEU-Natl Key Acct Mgr</role>
            <role>DEU-Natl Key Acct Rep</role>
            <role>DEU-ON Trade Leased Mgr(North)</role>
            <role>DEU-ON Trade Leased Mgr(Ressourcenreich)</role>
            <role>DEU-ON Trade Leased Mgr(South)</role>
            <role>DEU-ON Trade Leased Rep(North)</role>
            <role>DEU-ON Trade Leased Rep(Ressourcenreich)</role>
            <role>DEU-ON Trade Leased Rep(South)</role>
            <role>DEU-Off Trade Dir</role>
            <role>DEU-Off Trade Mgr (North)</role>
            <role>DEU-Off Trade Mgr (South)</role>
            <role>DEU-Off Trade Sls Rep (North)</role>
            <role>DEU-Off Trade Sls Rep (South)</role>
            <role>DEU-On-Trade Mangers</role>
            <role>DEU-On-Trade Mgr</role>
            <role>DEU-On-Trade Sls Mgr (North)</role>
            <role>DEU-On-Trade Sls Mgr (South)</role>
            <role>DEU-On-Trade Sls Rep (North)</role>
            <role>DEU-On-Trade Sls Rep (South)</role>
            <role>DEU-Sales Director</role>
            <role>DEU-Sales Manager</role>
            <role>DEU-Sales Rep</role>
            <role>FDC-Art Collection Accounting</role>
            <role>FDC-Art Collection Administrators</role>
            <role>FDC-Art Collection Users</role>
            <role>FDC-Force.com Administrators</role>
            <role>FDC-GD Managers</role>
            <role>FDC-GD Users</role>
            <role>FDC-PLFC Managers</role>
            <role>FDC-PLFC Users</role>
            <role>FDC-SoD Administrator</role>
            <role>FDC-SoD User</role>
            <role>Global Administrator</role>
            <role>INR-Brand Manager</role>
            <role>INR-Finance Manager</role>
            <role>INR-Market Manager/Admin</role>
            <role>INR-Sales Manager</role>
            <role>INR-Sales Rep</role>
            <role>JPN-Brand Manager</role>
            <role>JPN-Finance Manager</role>
            <role>JPN-Market Manager/Admin</role>
            <role>JPN-Sales Manager</role>
            <role>JPN-Sales Manager-Osaka</role>
            <role>JPN-Sales Manager-Tokyo</role>
            <role>JPN-Sales Rep</role>
            <role>JPN-Sales Rep-Osaka</role>
            <role>JPN-Sales Rep-Tokyo</role>
            <role>KOR-Brand Manager</role>
            <role>KOR-Finance Manager</role>
            <role>KOR-Market Manager/Admin</role>
            <role>KOR-Sales Manager</role>
            <role>KOR-Sales Manager (Off Premise)</role>
            <role>KOR-Sales Manager (On Premise)</role>
            <role>KOR-Sales Rep (Off Premise)</role>
            <role>KOR-Sales Rep (On Premise)</role>
            <role>THI-Finance Manager</role>
            <role>THI-Market Manager/Admin</role>
            <role>THI-Sales Manager</role>
            <role>THI-Sales Rep</role>
            <role>TWN-Finance Manager</role>
            <role>TWN-Market Manager/Admin</role>
            <role>TWN-Sales Manager</role>
            <role>TWN-Sales Rep</role>
            <role>TWN-Sales Rep North</role>
            <role>TWN-Sales Supervisor North</role>
            <role>zTest Mgr</role>
            <role>zTest Rep</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Local</fullName>
        <columns>Account_Market__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Brand__c</columns>
        <columns>NAME</columns>
        <columns>Promotion_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Mechanism__c</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Support_and_Backup__c</columns>
        <columns>Special_Event__c</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Market__c</field>
            <operation>contains</operation>
            <value>Japan</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Promotion__c.Sales_Promotion</value>
        </filters>
        <filters>
            <field>Promotion_Start_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2010</value>
        </filters>
        <label>Japan Local Promo</label>
        <language>en_US</language>
        <sharedTo>
            <group>JPN-All Users</group>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Theme</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>Account__c</columns>
        <columns>Mechanism__c</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Support_and_Backup__c</columns>
        <columns>Special_Event__c</columns>
        <columns>NAME</columns>
        <columns>Legacy_ID__c</columns>
        <columns>Target_Age_Group__c</columns>
        <columns>Target_Attendance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>JPY</value>
        </filters>
        <label>Japan Theme Promo</label>
        <language>en_US</language>
        <sharedTo>
            <group>JPN-All Users</group>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Apac_China_promotion</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Tier_1_WS_CHN__c</columns>
        <columns>Tier_2_WS_CHN__c</columns>
        <columns>Outlet_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Market__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>China Promotions List</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHN-All Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Apac_Taiwan_promotion</fullName>
        <columns>Approval_Status__c</columns>
        <columns>Brand__c</columns>
        <columns>NAME</columns>
        <columns>Promotion_Number__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>Mechanism__c</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Support_and_Backup__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>TWD</value>
        </filters>
        <label>Taiwan Promotion</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global Administrator</role>
            <roleAndSubordinates>TWN-Market Manager/Admin</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Apac_Thai_promotion</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>Approval_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Tier_1_WS_CHN__c</columns>
        <columns>Tier_2_WS_CHN__c</columns>
        <columns>Outlet_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Market__c</field>
            <operation>equals</operation>
            <value>Thailand</value>
        </filters>
        <label>Thailand Promotions List</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHN-All Users</group>
            <role>Global Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Brand__c</columns>
        <columns>Promotion_Activity__c</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Market__c</field>
            <operation>contains</operation>
            <value>Canada</value>
        </filters>
        <label>Canada - All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>CAD-Bus Dev East(BF)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Bus Dev West(BF)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Market Manager/Admin</roleAndSubordinates>
            <roleAndSubordinates>CAD-Marketing Director</roleAndSubordinates>
            <roleAndSubordinates>CAD-National Level (BF)</roleAndSubordinates>
            <roleAndSubordinates>CAD-National Level (Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager Alberta(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager BC(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager Ontario(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Manager Quebec(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Alberta(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep BC(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Manitoba(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Ontario(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Quebec(Hive)</roleAndSubordinates>
            <roleAndSubordinates>CAD-Sales Rep Saskatchewan(Hive)</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mass_Update</fullName>
        <columns>Fiscal_Year__c</columns>
        <columns>Brand_NPA__c</columns>
        <columns>Internal_Order__c</columns>
        <columns>NAME</columns>
        <columns>Freeze_Date__c</columns>
        <columns>Promotion_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Promotion__c.National_Promotion_US</value>
        </filters>
        <label>Mass Update</label>
        <language>en_US</language>
        <sharedTo>
            <group>NPA Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_NPA_Promotions</fullName>
        <columns>Fiscal_Year__c</columns>
        <columns>Internal_Order__c</columns>
        <columns>NAME</columns>
        <columns>Brand_NPA__c</columns>
        <columns>Tertile__c</columns>
        <columns>Promotion_Start_Date__c</columns>
        <columns>Promotion_End_Date__c</columns>
        <columns>Freeze_Date__c</columns>
        <columns>Promotion_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Promotion__c.National_Promotion_US</value>
        </filters>
        <label>My NPA Promotions</label>
        <language>en_US</language>
        <sharedTo>
            <group>NPA Users</group>
        </sharedTo>
    </listViews>
</CustomObject>